--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "homepage": "https://alexandercannon.github.io/marketing-website"
+  "homepage": "https://alexandercannon.github.io/marketing-site/"
 }
